# data-capture

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
table_parser/: table_parser.py
test-data/: Kyalami - 230812 __ TSL Live Timing.html
test-data/Kyalami - 230812 __ TSL Live Timing_files/: css  css(1)  hubs  jquery  jqueryui  js  js(1)  raphael  signalr  tsl  tsl.statistics  tsl.tracking  tsl.weather
test-data/scrapes/: 23-02-2023_09-48-32.csv  23-02-2023_09-50-01.csv
tsl_interface/: tsl_interface.py
